fix: fix saga event order - inventory - payment
